Fix z-index in premium chip

--- a/src/blocks/premium/style.scss
+++ b/src/blocks/premium/style.scss
@@ -9,7 +9,7 @@
   content: "";
   display: block;
   position: absolute;
-  z-index: 100;
+  z-index: 1;
   left: -60px;
   top: 0;
   bottom: 0;
